# fastapi-rest-api

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/auth/: auth_services.py
app/db/: db.py
app/dependencies/: auth_dependencie.py
app/models/: user_model.py
app/routes/: login_routes.py  user_routes.py
app/schemas/: login_schema.py  user_schema.py
app/services/: user_services.py
app/utils/: hash_password.py  jwt_management.py
