[tool.poetry]
name = "fastapi-rest-api"
version = "1.0.0"
description = ""
authors = ["Lucas Lima <12400617-bezlima@users.noreply.gitlab.com>"]
readme = "README.md"

package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
SQLAlchemy = "^2.0.31"
bcrypt = "^4.2.0"
python-jose = "^3.3.0"
PyJWT = "^2.8.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
